added meta tags for social media

--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Web Portfolio for Alex Jaros" />
+        <meta name="author" content="Alex Jaros" />
+        <!-- Twitter meta tags -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@AlexJaros2">
+  <meta name="twitter:title" content="Alex Jaros, Bussiness Analytics Student">
+  <meta name="twitter:description" content="Web Portfolio for Alex Jaros">
+  <meta name="twitter:image" content="https://alexjaros.me/laptop.webp">
+  
+  <!-- Open Graph meta tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Alex Jaros, Bussiness Analytics Student">
+  <meta property="og:description" content="Web Portfolio for Alex Jaros">
+  <meta property="og:image" content="https://alexjaros.me/laptop.webp">
+  <meta property="og:url" content="https://alexjaros.me">
+
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
         <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
