--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+
+        <link rel="stylesheet" href="cookie-popup.css" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -119,6 +121,25 @@
                 </div>
             </section>
             <hr class="m-0" />
+<!-- Copyright Section -->
+<div class="copyright py-4 text-center text-white">
+    <div class="container">
+      <small>Copyright &copy; Alex Jaros</small>
+    </div>
+  </div>
+
+  <div id="cookie-popup">
+    <p>
+      By using this site you agree to the storing of cookies on your device to
+      enhance site navigation and to analyze site usage. Learn more about our
+      <a href="/cookie-policy">cookie policy</a>.
+    </p>
+    <p>
+      <button id="accept-cookies">Accept</button>
+    </p>
+  </div>
+
+  <script src="cookie-popup.js"></script>
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-KYJTE3XZ60"></script>
