--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
 <div class="copyright py-4 text-center text-white">
     <div class="container">
       <small>Copyright &copy; Alex Jaros</small>
+      <small><a href="privacy-policy.html">Privacy Policy</a></small>
+      <small><a href="terms.html">Terms & Conditions</a></small>
     </div>
   </div>
 
@@ -132,7 +134,7 @@
     <p>
       By using this site you agree to the storing of cookies on your device to
       enhance site navigation and to analyze site usage. Learn more about our
-      <a href="/cookie-policy">cookie policy</a>.
+      <a href="/cookie-policy.html">cookie policy</a>.
     </p>
     <p>
       <button id="accept-cookies">Accept</button>
