--- a/index.html
+++ b/index.html
@@ -125,8 +125,11 @@
 <div class="copyright py-4 text-center text-white">
     <div class="container">
       <small>Copyright &copy; Alex Jaros</small>
-      <small><a href="privacy-policy.html">Privacy Policy</a></small>
-      <small><a href="terms.html">Terms & Conditions</a></small>
+      <small>
+        <a href="privacy-policy.html">Privacy Policy</a>
+        &nbsp;|&nbsp;
+        <a href="terms.html">Terms & Conditions</a>
+      </small>
     </div>
   </div>
 
