--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 </div>
             </section>
             <hr class="m-0" />
+        </div> 
 <!-- Copyright Section -->
 <div class="copyright py-4 text-center text-white">
     <div class="container">
