fixed terms and privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Privacy Policy</h1>
-    <p>Effective Date: May 5, 2025</p>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy | alexjaros.me</title>
 </head>
 <body>
-
   <h1>Privacy Policy</h1>
+  <p>Effective Date: May 5, 2025</p>
 
   <p>This Privacy Policy explains how alexjaros.me collects and uses information about visitors.</p>
 
@@ -33,8 +24,5 @@
 
   <h2>Your Choices</h2>
   <p>You can disable cookies in your browser settings or use browser extensions to opt out of Google Analytics tracking.</p>
-
-</body>
-</html>
 </body>
 </html>
