--- a/terms.html
+++ b/terms.html
@@ -1,22 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Terms & Conditions</h1>
-    <p>Effective Date: May 5, 2025</p>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Terms and Conditions | alexjaros.me</title>
 </head>
 <body>
-
-  <h1>Terms and Conditions</h1>
+  <h1>Terms & Conditions</h1>
+  <p>Effective Date: May 5, 2025</p>
 
   <p>By accessing and using alexjaros.me, you agree to the following terms and conditions.</p>
 
@@ -31,9 +22,5 @@
 
   <h2>Changes to These Terms</h2>
   <p>We reserve the right to update these terms at any time. Changes will be posted on this page with an updated effective date.</p>
-
-</body>
-</html>
-
 </body>
 </html>
