--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
         <meta name="description" content="Web Portfolio for Alex Jaros" />
         <meta name="author" content="Alex Jaros" />
         <!-- Twitter meta tags -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@AlexJaros2">
-  <meta name="twitter:title" content="Alex Jaros, Bussiness Analytics Student">
-  <meta name="twitter:description" content="Web Portfolio for Alex Jaros">
-  <meta name="twitter:image" content="https://alexjaros.me/laptop.webp">
-  
-  <!-- Open Graph meta tags -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Alex Jaros, Bussiness Analytics Student">
-  <meta property="og:description" content="Web Portfolio for Alex Jaros">
-  <meta property="og:image" content="https://alexjaros.me/laptop.webp">
-  <meta property="og:url" content="https://alexjaros.me">
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@AlexJaros2">
+        <meta name="twitter:title" content="Alex Jaros, Bussiness Analytics Student">
+        <meta name="twitter:description" content="Web Portfolio for Alex Jaros">
+        <meta name="twitter:image" content="https://alexjaros.me/laptop.webp">
+        
+        <!-- Open Graph meta tags -->
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Alex Jaros, Bussiness Analytics Student">
+        <meta property="og:description" content="Web Portfolio for Alex Jaros">
+        <meta property="og:image" content="https://alexjaros.me/laptop.webp">
+        <meta property="og:url" content="https://alexjaros.me">
 
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
@@ -41,7 +41,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Alex Jaros</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/profile.jpeg" alt="Profile Image" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -49,9 +49,11 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about-me">About Me</a></li> <!-- Added About Me link -->
                 </ul>
             </div>
         </nav>
+
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
@@ -75,6 +77,16 @@
                 </div>
             </section>
             <hr class="m-0" />
+
+            <!-- About Me Section -->
+            <section class="resume-section" id="about-me"> <!-- New About Me Section -->
+                <div class="resume-section-content">
+                    <h2 class="mb-5">About Me</h2>
+                    <p>Hi, I’m Alex Jaros, a Business Analytics student at the University of Iowa. I am passionate about using data to drive decision-making and enhance business strategies. I have experience with various analytics tools such as Power BI and SQL, and I’m always eager to learn more and apply my knowledge in real-world situations. Outside of work and academics, I enjoy hiking, playing chess, and volunteering in my community.</p>
+                </div>
+            </section>
+            <hr class="m-0" />
+
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
@@ -98,6 +110,7 @@
                 </div>
             </section>
             <hr class="m-0" />
+
             <!-- Education-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
@@ -122,39 +135,40 @@
             </section>
             <hr class="m-0" />
         </div> 
-<!-- Copyright Section -->
-<div class="copyright py-4 text-center text-white">
-    <div class="container">
-      <small>Copyright &copy; Alex Jaros</small>
-      <small>
-        <a href="privacy-policy.html">Privacy Policy</a>
-        &nbsp;|&nbsp;
-        <a href="terms.html">Terms & Conditions</a>
-      </small>
-    </div>
-  </div>
 
-  <div id="cookie-popup">
-    <p>
-      By using this site you agree to the storing of cookies on your device to
-      enhance site navigation and to analyze site usage. Learn more about our
-      <a href="/cookie-policy.html">cookie policy</a>.
-    </p>
-    <p>
-      <button id="accept-cookies">Accept</button>
-    </p>
-  </div>
+        <!-- Copyright Section -->
+        <div class="copyright py-4 text-center text-white">
+            <div class="container">
+                <small>Copyright &copy; Alex Jaros</small>
+                <small>
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    &nbsp;|&nbsp;
+                    <a href="terms.html">Terms & Conditions</a>
+                </small>
+            </div>
+        </div>
 
-  <script src="cookie-popup.js"></script>
+        <div id="cookie-popup">
+            <p>
+                By using this site you agree to the storing of cookies on your device to
+                enhance site navigation and to analyze site usage. Learn more about our
+                <a href="/cookie-policy.html">cookie policy</a>.
+            </p>
+            <p>
+                <button id="accept-cookies">Accept</button>
+            </p>
+        </div>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KYJTE3XZ60"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+        <script src="cookie-popup.js"></script>
 
-  gtag('config', 'G-KYJTE3XZ60');
-</script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-KYJTE3XZ60"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-KYJTE3XZ60');
+        </script>
     </body>
 </html>
