moved about me and changed name

--- a/index.html
+++ b/index.html
@@ -77,16 +77,6 @@
                 </div>
             </section>
             <hr class="m-0" />
-
-            <!-- About Me Section -->
-            <section class="resume-section" id="about-me"> <!-- New About Me Section -->
-                <div class="resume-section-content">
-                    <h2 class="mb-5">About Me</h2>
-                    <p>Hi, I’m Alex Jaros, a Business Analytics student at the University of Iowa. I am passionate about using data to drive decision-making and enhance business strategies. I have experience with various analytics tools such as Power BI and SQL, and I’m always eager to learn more and apply my knowledge in real-world situations. Outside of work and academics, I enjoy hiking, playing chess, and volunteering in my community.</p>
-                </div>
-            </section>
-            <hr class="m-0" />
-
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
@@ -135,6 +125,15 @@
             </section>
             <hr class="m-0" />
         </div> 
+
+         <!-- About Me Section -->
+         <section class="resume-section" id="about-me"> <!-- New About Me Section -->
+            <div class="resume-section-content">
+                <h2 class="mb-5">Background</h2>
+                <p>Hi, I’m Alex Jaros, a Business Analytics student at the University of Iowa. I am passionate about using data to drive decision-making and enhance business strategies. I have experience with various analytics tools such as Power BI and SQL, and I’m always eager to learn more and apply my knowledge in real-world situations. Outside of work and academics, I enjoy playing sports, chess, and the outdoors.</p>
+            </div>
+        </section>
+        <hr class="m-0" />
 
         <!-- Copyright Section -->
         <div class="copyright py-4 text-center text-white">
