--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #003366;" id="sideNav"> <!-- Dark blue navbar -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Alex Jaros</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/profile.jpeg" alt="Profile Image" /></span>
@@ -124,17 +124,16 @@
                 </div>
             </section>
             <hr class="m-0" />
-
-            <!-- About Me Section -->
-            <section class="resume-section" id="about-me"> <!-- New About Me Section -->
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Background</h2>
-                    <p>Hi, I’m Alex Jaros, a Business Analytics student at the University of Iowa. I am passionate about using data to drive decision-making and enhance business strategies. I have experience with various analytics tools such as Power BI and SQL, and I’m always eager to learn more and apply my knowledge in real-world situations. Outside of work and academics, I enjoy playing sports, chess, and the outdoors.</p>
-                </div>
-            </section>
-            <hr class="m-0" />
-
         </div> 
+
+         <!-- About Me Section -->
+         <section class="resume-section" id="about-me"> <!-- New About Me Section -->
+            <div class="resume-section-content">
+                <h2 class="mb-5">Background</h2>
+                <p>Hi, I’m Alex Jaros, a Business Analytics student at the University of Iowa. I am passionate about using data to drive decision-making and enhance business strategies. I have experience with various analytics tools such as Power BI and SQL, and I’m always eager to learn more and apply my knowledge in real-world situations. Outside of work and academics, I enjoy playing sports, chess, and the outdoors.</p>
+            </div>
+        </section>
+        <hr class="m-0" />
 
         <!-- Copyright Section -->
         <div class="copyright py-4 text-center text-white">
@@ -155,4 +154,20 @@
                 <a href="/cookie-policy.html">cookie policy</a>.
             </p>
             <p>
-                <button id="accept-cookies">Accept</
+                <button id="accept-cookies">Accept</button>
+            </p>
+        </div>
+
+        <script src="cookie-popup.js"></script>
+
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-KYJTE3XZ60"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-KYJTE3XZ60');
+        </script>
+    </body>
+</html>
