--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div> 
 
          <!-- About Me Section -->
-         <section class="resume-section" id="about-me"> <!-- New About Me Section -->
+         <section class="resume-section" id="background"> <!-- New About Me Section -->
             <div class="resume-section-content">
                 <h2 class="mb-5">Background</h2>
                 <p>Hi, I’m Alex Jaros, a Business Analytics student at the University of Iowa. I am passionate about using data to drive decision-making and enhance business strategies. I have experience with various analytics tools such as Power BI and SQL, and I’m always eager to learn more and apply my knowledge in real-world situations. Outside of work and academics, I enjoy playing sports, chess, and the outdoors.</p>
