--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
                     </div>
                     <p class="lead mb-5">I am proficient in harnessing data-driven methodologies to synthesize holistic insights and optimize cross-functional alignment. By deploying scalable analytics frameworks and iterative intelligence loops, I drive stakeholder engagement and amplify enterprise-level decision-making velocity.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/alexjaros/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/alex-jaros"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://x.com/AlexJaros2"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </section>
@@ -125,7 +124,7 @@
             </section>
             <hr class="m-0" />
         </div> 
-        
+
         <!-- Copyright Section -->
         <div class="copyright py-4 text-center text-white">
             <div class="container">
