--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         <span class="text-primary">Jaros</span>
                     </h1>
                     <div class="subheading mb-5">
-                        13 E Burlington Street · Iowa City, IA 52242 · (563) 499-1529 ·
-                        <a href="mailto:name@email.com">jaros899@gmail.com</a>
+                        118 S Burlington Street · Iowa City, IA 52240 · (563) 489-1564 ·
+                        <a href="mailto:name@email.com">jaros880@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am proficient in harnessing data-driven methodologies to synthesize holistic insights and optimize cross-functional alignment. By deploying scalable analytics frameworks and iterative intelligence loops, I drive stakeholder engagement and amplify enterprise-level decision-making velocity.</p>
                     <div class="social-icons">
@@ -91,7 +91,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Power BI Analyst Intern</h3>
-                            <div class="subheading mb-3">HNI Corporation</div>
+                            <div class="subheading mb-3">HOP Corporation</div>
                             <p>Leveraged immersive Power BI enablement to synergize data visualization paradigms, empowering business developers through actionable dashboard optimization. Operationalized enhanced SQL proficiencies to streamline backend synergies. Incubated a generative AI thought-leadership initiative, culminating in a high-impact deliverable to stakeholders at internship closeout.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2024 - August 2024</span></div>
@@ -115,7 +115,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Davenport Central High School</h3>
+                            <h3 class="mb-0">Central High School</h3>
                             <p>GPA: 3.74</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2017 - May 2021</span></div>
