--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- Twitter meta tags -->
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@AlexJaros2">
-        <meta name="twitter:title" content="Alex Jaros, Bussiness Analytics Student">
+        <meta name="twitter:title" content="Alex Jaros, Business Analytics Student">
         <meta name="twitter:description" content="Web Portfolio for Alex Jaros">
         <meta name="twitter:image" content="https://alexjaros.me/laptop.webp">
         
