--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <!-- Open Graph meta tags -->
         <meta property="og:type" content="website">
-        <meta property="og:title" content="Alex Jaros, Bussiness Analytics Student">
+        <meta property="og:title" content="Alex Jaros, Business Analytics Student">
         <meta property="og:description" content="Web Portfolio for Alex Jaros">
         <meta property="og:image" content="https://alexjaros.me/laptop.webp">
         <meta property="og:url" content="https://alexjaros.me">
