--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="192x192" href="./android-chrome-192x192.png"> 
         <link rel="icon" type="image/png" sizes="512x512" href="./android-chrome-512x512.png">   
-        <title>Resume - Bootstrap Theme</title>
+        <title>Alex Jaros – Business Analytics Portfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
